--- a/human_modelling.cbp
+++ b/human_modelling.cbp
@@ -38,7 +38,9 @@
 		<Unit filename="../../drawstuff/src/resources.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
-		<Unit filename="human_modelling.cpp" />
+		<Unit filename="include/util.h" />
+		<Unit filename="src/human_modelling.cpp" />
+		<Unit filename="src/util.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
