--- a/human_modelling.cbp
+++ b/human_modelling.cbp
@@ -39,9 +39,11 @@
 			<Option compilerVar="WINDRES" />
 		</Unit>
 		<Unit filename="include/body.h" />
+		<Unit filename="include/save_simu.h" />
 		<Unit filename="include/util.h" />
 		<Unit filename="src/body.cpp" />
 		<Unit filename="src/human_modelling.cpp" />
+		<Unit filename="src/save_simu.cpp" />
 		<Unit filename="src/util.cpp" />
 		<Extensions>
 			<code_completion />
